# raspi-sel

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build_model.py  current_logging.py  ina169_measurement.py  ina3221_measurement.py  main.cpp  pyrightconfig.json  requirements.txt  run_monitor.sh  setup.py  test_current.py
analysis/: cpu_time.ipynb  cycles.ipynb  hotnets_paper_graphs.ipynb  perf_all_freqs.ipynb  perf_cycles.ipynb  perf_disk.ipynb  perf_heuristic.ipynb  perf_hw.ipynb  perf_linear.ipynb  perf_linear_smoothed.ipynb  perf_numa.ipynb  run_matrix_2.5a.ipynb
analyzer/: analyzer.py  run.sh
classify/: CMakeLists.txt  classify.cpp  classify.h  classify.py  model.py
cpu-stat/: CMakeLists.txt
logger/: CMakeLists.txt  README.md  record.c
record/: CMakeLists.txt  record.cpp  record.h
record_ina3221/: CMakeLists.txt  ina3221.cpp  ina3221.h
record_system/: CMakeLists.txt  record.cpp  record.h  record_system.cpp  record_system.h
results/: cpu_ina3221.csv  cpu_perf.csv  cycle_both.csv  cycle_both_ina3221.csv  cycle_cpu.csv  cycle_mem.csv  disk-copy.csv  disk-memcpy.csv  disk-rick.csv  fftw.csv  fftw_perf.csv  matrix-numa.csv  mem-numa.csv  mem_ina3221.csv  numa-memcpy.csv  numa-memthrash.csv  run_matrix_2.5a.csv
seelie/: CMakeLists.txt  main.cpp
seelie/classify/: CMakeLists.txt  classify.cpp  classify.h
seelie/record_ina3221/: ina3221.h
src/: CMakeLists.txt  record.c
tests/: both_stress.json  cpu_stress.json  cpu_stress.sh  fftw.json  mem_stress.json
toolchain/: .gitignore  rpi-cross.cmake
util/: test_current.py
(+3 files in other folders)
